--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia+Sans+Condensed" rel="stylesheet">
 	
 	<!-- clock   -->
-	<link rel="stylesheet" href="css/responsive-clock.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\responsive-clock.css">
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\icomoon.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\bootstrap.css">
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css'>
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="css/magnific-popup.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\magnific-popup.css">
 
 	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\owl.carousel.min.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\owl.theme.default.min.css">
 
 	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\style.css">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -168,21 +168,21 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(https://scontent.fblr1-9.fna.fbcdn.net/v/t39.30808-6/438170893_1115369066421404_809456692708158342_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=wraYvdYIxJsQ7kNvgEYgSfD&_nc_ht=scontent.fblr1-9.fna&oh=00_AYB55ecb0ahpFqdxM6MwVzLrnOfOeZlcv4N5vhN3iSK5Bg&oe=664777F6); "> 
-						<a href="https://scontent.fblr1-9.fna.fbcdn.net/v/t39.30808-6/438170893_1115369066421404_809456692708158342_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=wraYvdYIxJsQ7kNvgEYgSfD&_nc_ht=scontent.fblr1-9.fna&oh=00_AYB55ecb0ahpFqdxM6MwVzLrnOfOeZlcv4N5vhN3iSK5Bg&oe=664777F6">
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(https://scontent.fblr1-3.fna.fbcdn.net/v/t39.30808-6/293602810_727744261850555_7370925853547514964_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=VvtM3FJVZG8Q7kNvgGKhUFh&_nc_ht=scontent.fblr1-3.fna&oh=00_AYAges5ssJLMRl9k25BVggzJb-WITb0qz3ZPPykcZqbm0g&oe=66479A5F); "> 
+						<a href="https://scontent.fblr1-3.fna.fbcdn.net/v/t39.30808-6/293602810_727744261850555_7370925853547514964_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=VvtM3FJVZG8Q7kNvgGKhUFh&_nc_ht=scontent.fblr1-3.fna&oh=00_AYAges5ssJLMRl9k25BVggzJb-WITb0qz3ZPPykcZqbm0g&oe=66479A5F">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
 
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(https://tse1.mm.bing.net/th?id=OIP.DaBQcb_z4xQKit0G-sWUTgHaE7&pid=Api&P=0&h=180); "> 
-						<a href="https://tse1.mm.bing.net/th?id=OIP.DaBQcb_z4xQKit0G-sWUTgHaE7&pid=Api&P=0&h=180">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(https://tse1.explicit.bing.net/th?id=OIP.u4hoEZ4MWBCI07UjC_TMmQHaHa&pid=Api&P=0&h=180); "> 
+						<a href="https://tse1.explicit.bing.net/th?id=OIP.u4hoEZ4MWBCI07UjC_TMmQHaHa&pid=Api&P=0&h=180">
 							<div class="case-studies-summary">
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(https://scontent.fblr1-3.fna.fbcdn.net/v/t39.30808-6/293602810_727744261850555_7370925853547514964_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=VvtM3FJVZG8Q7kNvgGKhUFh&_nc_ht=scontent.fblr1-3.fna&oh=00_AYAges5ssJLMRl9k25BVggzJb-WITb0qz3ZPPykcZqbm0g&oe=66479A5F); "> 
-						<a href="https://scontent.fblr1-3.fna.fbcdn.net/v/t39.30808-6/293602810_727744261850555_7370925853547514964_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=5f2048&_nc_ohc=VvtM3FJVZG8Q7kNvgGKhUFh&_nc_ht=scontent.fblr1-3.fna&oh=00_AYAges5ssJLMRl9k25BVggzJb-WITb0qz3ZPPykcZqbm0g&oe=66479A5F">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(https://scontent.fblr1-9.fna.fbcdn.net/v/t39.30808-6/442468941_122097663980322436_8283637174817517264_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=myICcOHPdrQQ7kNvgHezocz&_nc_ht=scontent.fblr1-9.fna&oh=00_AYAEzDchjUjrcmPIPgqr7J5LOyee0x2AGUnpdtCTFBbd3A&oe=6647EC9F); "> 
+						<a href="https://scontent.fblr1-9.fna.fbcdn.net/v/t39.30808-6/442468941_122097663980322436_8283637174817517264_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_ohc=myICcOHPdrQQ7kNvgHezocz&_nc_ht=scontent.fblr1-9.fna&oh=00_AYAEzDchjUjrcmPIPgqr7J5LOyee0x2AGUnpdtCTFBbd3A&oe=6647EC9F">
 							<div class="case-studies-summary">
 							</div>
 						</a>
