--- a/index.html
+++ b/index.html
@@ -32,23 +32,23 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia+Sans+Condensed" rel="stylesheet">
 	
 	<!-- clock   -->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\responsive-clock.css">
+	<link rel="stylesheet" href="responsive-clock.css">
 	<!-- Animate.css -->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\animate.css">
+	<link rel="stylesheet" href="animate.css">
 	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\icomoon.css">
+	<link rel="stylesheet" href="icomoon.css">
 	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\bootstrap.css">
+	<link rel="stylesheet" href="bootstrap.css">
 	<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/flipclock/0.7.8/flipclock.css'>
 	<!-- Magnific Popup -->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\magnific-popup.css">
+	<link rel="stylesheet" href="magnific-popup.css">
 
 	<!-- Owl Carousel  -->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\owl.carousel.min.css">
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\owl.theme.default.min.css">
+	<link rel="stylesheet" href="owl.carousel.min.css">
+	<link rel="stylesheet" href="owl.theme.default.min.css">
 
 	<!-- Theme style  -->
-	<link rel="stylesheet" href="C:\Users\Ravi Kumara C P\OneDrive\Desktop\html\wedding-website-main\css\style.css">
+	<link rel="stylesheet" href="style.css">
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
