--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta name="author" content="Shyam & Rincy" />
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:image" content="images/og.jpg"/>
+	<meta property="og:image" content="og.jpg"/>
 	<meta property="og:site_name" content="Jaanu ❤️ Rakshu - 19.05.2024">
     <meta property="og:title" content="Jaanu ❤️ Rakshu - 19.05.2024">
     <meta property="og:description" content="We are getting hitched - The dates are 21st & 29th of October '23 and we would like you to be a part of it.">
@@ -23,7 +23,7 @@
     <!-- Website to visit when clicked in fb or WhatsApp-->
     <meta property="og:url" content="https://we.shyamjos.com">
 	<meta property="og:type" content="website"/>
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:type" content="jpeg">
 
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
@@ -249,6 +249,6 @@
 	<script src="js/simplyCountdown.js"></script>
 	<!-- Main -->
 	<script src="js/main.js"></script>
-	<center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="images/github-logo.png"> </a> </center>
+	<center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="github-logo.png"> </a> </center>
 	</body>
 </html>
