--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- Website to visit when clicked in fb or WhatsApp-->
     <meta property="og:url" content="https://we.shyamjos.com">
 	<meta property="og:type" content="website"/>
-    <meta property="og:image:type" content="jpeg">
+    <meta property="og:image:type" content="image/jpeg">
 
 
 	<link href='https://fonts.googleapis.com/css?family=Work+Sans:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
@@ -80,7 +80,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/bg.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(bg.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -89,7 +89,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>Jaanu &amp; Rakshu</h1>
 							<br>
-							<img src="images/fprint.png" alt="Jaanu + Rakshu"> 
+							<img src="fprint.png" alt="Jaanu + Rakshu"> 
 							<h2>19.05.2024</h2>
 							<h2>"I have found the one whom my soul loves." <br>Song of Solomon 3:4</h2>
 							<div class="flipTimebox">
