--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
 
 				<div class="container animate-box">
-					<div class="fh5co-video fh5co-bg" style="background-image: url(images/img_bg_3.jpg); ">
+					<div class="fh5co-video fh5co-bg" style="background-image: url(img_bg_3.jpg); ">
 						<a href="#" class="popup-vimeo"><i class="icon-video2"></i></a>
 						<div class="overlay"></div>
 					</div>
@@ -249,6 +249,6 @@
 	<script src="simplyCountdown.js"></script>
 	<!-- Main -->
 	<script src="main.js"></script>
-	<center>View Source Code on <a href="https://github.com/shyamjos/wedding-website">GitHub <img src="github-logo.png"> </a> </center>
+	<center>View Source Code on <a href="https://github.com/Ravikumaracp/wedding">GitHub <img src="github-logo.png"> </a> </center>
 	</body>
 </html>
